# termin

./: .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE_TODO.md  AUDIO_SYSTEM_PLAN.md  BUGS.md  CANONICAL_NAMING.md  CLAUDE.md  CMakeLists.txt  DUPLICATE_CLASSES_ANALYSIS.md  INSPECT_REFACTOR_PLAN.md  LEGACY_IMPORT_CLEANUP_PLAN.md  PLAN_COMPONENT_LIFETIME.md  PLAN_SCENE_MANAGER_MIGRATION.md  PREFAB_OVERRIDE_PLAN.md  README.md  RESOURCE_REFACTORING_PLAN.md  SAVED_WORLDS.world.json  SCENE_MIGRATION_PLAN.md  SERIALIZATION_MIGRATION_PLAN.md  TECHNICAL_NOTES.md  TODO.md  android-logcat-termin.sh  bash.exe.stackdump  build-and-install-bindings.sh  build-and-install-cpp.sh  build-and-install-csharp.sh  build-and-install.ps1  build-and-install.sh  build-android-apk.sh  build-docs.sh  build-quest-openxr-apk.sh  build-sdk-android.sh  build-sdk-bindings.ps1  build-sdk-bindings.sh  build-sdk-cpp.ps1  build-sdk-cpp.sh  build-sdk-csharp.ps1  build-sdk-csharp.sh  build-sdk-wheels.sh  (+61 more)
core_c/: CMakeLists.txt
core_c/include/: inspect_registry_compat.hpp  tc_animation.h  tc_binding.h  tc_component.h  tc_component_python.h  tc_entity.h  tc_entity_pool.h  tc_frame_graph.h  tc_gpu.h  tc_gpu_context.h  tc_gpu_share_group.h  tc_handle.h  tc_input_event.h  tc_inspect.h  tc_inspect.hpp  tc_inspect_cpp.hpp  tc_kind.h  tc_kind.hpp  tc_log.h  tc_log.hpp  tc_material_registry.h  tc_mesh.h  tc_mesh_registry.h  tc_pass.h  tc_pipeline.h  tc_pipeline_registry.h  tc_pose.h  tc_primitive_mesh.h  tc_profiler.h  tc_quat.h  tc_render.h  tc_resource.h  tc_scene.h  tc_scene_lighting.h  tc_scene_pipeline_template.h  tc_scene_registry.h  tc_scene_skybox.h  tc_shader.h  tc_shader_registry.h  tc_skeleton.h  (+11 more)
core_c/src/: tc_animation_registry.c  tc_archetype.c  tc_collision.c  tc_collision_world.c  tc_component.c  tc_component_python.c  tc_core.c  tc_display.c  tc_display_input_router.c  tc_entity.c  tc_entity_pool.c  tc_entity_pool_registry.c  tc_frame_graph.c  tc_gpu.c  tc_gpu_context.c  tc_gpu_share_group.c  tc_hash_map.c  tc_input_manager.c  tc_inspect.c  tc_inspect_component_adapter.cpp  tc_inspect_core_instance.cpp  tc_inspect_instance.cpp  tc_inspect_pass_adapter.cpp  tc_kind.c  tc_kind_instance.cpp  tc_log.c  tc_material_registry.c  tc_mesh.c  tc_mesh_registry.c  tc_pass.c  tc_pipeline.c  tc_pool.c  tc_primitive_mesh.c  tc_profiler.c  tc_project_settings.c  tc_render.c  tc_render_surface.c  tc_rendering_manager_instance.cpp  tc_resource_map.c  tc_scene.c  (+15 more)
core_c/tests/: test_cpp.cpp  test_data_structures.c  test_main.c  test_mesh.c
cpp/: CMakeCache.txt  CMakeLists.txt  CTestCustom.cmake.in  Makefile  build.bat  build.sh  build_test.ps1  cmake_install.cmake  python_bindings.cmake
cpp/app/: main.cpp  main_launcher.cpp  main_minimal.cpp
cpp/src/: bindings.cpp  physics_bindings.cpp  voxels_bindings.cpp
cpp/termin/: animation_bindings.cpp  bindings.cpp  colliders_bindings.cpp  collision_bindings.cpp  entity_bindings.cpp  entity_bindings.hpp  export.hpp  geom_bindings.cpp  inspect_bindings.cpp  inspect_bindings.hpp  kind_bindings.cpp  kind_bindings.hpp  lighting_bindings.cpp  log_bindings.cpp  log_bindings.hpp  mesh_bindings.cpp  mesh_bindings.hpp  pch.hpp  physics_bindings.cpp  profiler_bindings.cpp  profiler_bindings.hpp  render_bindings.cpp  render_bindings.hpp  scene_bindings.cpp  scene_bindings.hpp  sdl_bindings.cpp  sdl_bindings.hpp  skeleton_bindings.cpp  skeleton_bindings.hpp  tc_collision_c_api.cpp  tc_component_python.cpp  tc_component_python.h  tc_component_python_bindings.cpp  tc_component_python_bindings.hpp  tc_inspect_csharp.cpp  tc_inspect_csharp.h  tc_scene.cpp  tc_scene.hpp  tc_scene_bindings.cpp  tc_scene_lighting_bindings.cpp  (+7 more)
cpp/tests/: tests_binding.cpp  tests_colliders.cpp  tests_collision.cpp  tests_general_pose3.cpp  tests_general_transform3.cpp  tests_inspect_registry.cpp
cpp/trent/: json.cpp  json.h  yaml.cpp
tcplot/: CMakeLists.txt  setup.py
tcplot/cmake/: tcplotConfig.cmake.in
tcplot/docs/: index.md
tcplot/examples/: _host.py  demo_3d_helix.py  demo_3d_surface.py  demo_multi.py  demo_scatter.py  demo_sin.py
tcplot/python/: CMakeLists.txt
tcplot/src/: axes.cpp  engine2d.cpp  engine3d.cpp  gpu_host.cpp  orbit_camera.cpp  plot_data.cpp  plot_view2d.cpp  plot_view2d_multi.cpp  plot_view3d.cpp  styles.cpp
tcplot/tcplot/: __init__.py  axes.py  camera3d.py  data.py  engine2d.py  engine3d.py  plot2d.py  plot3d.py  styles.py
termin-android/: CMakeLists.txt
termin-android/assets/: manifest.json  scene.json
termin-android/cmake/: termin_androidConfig.cmake.in
termin-android/platform/: build.gradle  settings.gradle
termin-android/src/: android_mesh_spv.hpp  bootstrap.cpp
termin-animation/: CMakeLists.txt  setup.py
termin-animation/cmake/: termin_animationConfig.cmake.in
termin-animation/docs/: index.md
termin-animation/src/: tc_animation_registry.c  (+1 more)
termin-audio/: CMakeLists.txt  setup.py
termin-base/: CMakeLists.txt  setup.py
termin-bootstrap/: CMakeLists.txt  setup.py
termin-build-tools/: pyproject.toml
termin-cli/: CMakeLists.txt
termin-collision/: CMakeLists.txt  setup.py
termin-csg/: AGENTS.md  CMakeLists.txt  csg_cad.py  setup.py
termin-csharp/: CMakeLists.txt  Termin.CSharp.sln  pack_libs.ps1  rebuild.ps1  termin.i  termin_plot.i
termin-dispatch/: CMakeLists.txt  setup.py
termin-display/: CMakeLists.txt  setup.py
termin-engine/: CMakeLists.txt  setup.py
termin-graphics/: .gitignore  AGENTS.md  BACKEND_ABSTRACTION_ANALYSIS.md  CMakeLists.txt  install.sh  setup.py
termin-gui-native/: CMakeLists.txt  README.md  setup.py
termin-image/: CMakeLists.txt  setup.py
termin-input/: CMakeLists.txt  setup.py
termin-lighting/: CMakeLists.txt  setup.py
termin-materials/: CMakeLists.txt  setup.py
termin-modules/: CMakeLists.txt  README.md  setup.py
termin-nanobind-sdk/: CMakeLists.txt  README.md  setup.py
termin-navmesh/: CMakeLists.txt  setup.py
termin-openxr/: CMakeLists.txt
termin-physics/: CMakeLists.txt  setup.py
termin-player/: AGENTS.md  CMakeLists.txt  setup.py
termin-prefab/: CMakeLists.txt  setup.py
(+6986 files in other folders)
