cmake_minimum_required(VERSION 3.18)
project(termin_monorepo VERSION 0.1.0 LANGUAGES C CXX)

option(TERMIN_BUILD_MONOREPO "Build Termin as one CMake target graph" ON)
option(TERMIN_BUILD_PYTHON "Build Python/nanobind bindings" OFF)
option(TERMIN_BUILD_TESTS "Build C/C++ tests" OFF)
option(TERMIN_ENABLE_VULKAN "Enable Vulkan support" OFF)
option(TERMIN_ENABLE_SDL "Enable SDL support" ON)
option(TERMIN_BUILD_EDITOR_MINIMAL "Build minimal editor executable" OFF)
option(TERMIN_BUILD_EDITOR_EXE "Build Qt editor executable" OFF)
option(TERMIN_BUILD_LAUNCHER "Build launcher executable" OFF)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
    set(CMAKE_BUILD_TYPE Release CACHE STRING "Build type" FORCE)
endif()

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
include(TerminDependencies)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")

set(TERMIN_BASE_BUILD_TESTS ${TERMIN_BUILD_TESTS} CACHE BOOL "" FORCE)
set(TERMIN_MODULES_BUILD_TESTS ${TERMIN_BUILD_TESTS} CACHE BOOL "" FORCE)
set(TERMIN_CSG_BUILD_TESTS ${TERMIN_BUILD_TESTS} CACHE BOOL "" FORCE)
set(TERMIN_CSG_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
set(BUILD_TESTS ${TERMIN_BUILD_TESTS} CACHE BOOL "" FORCE)
set(TI_BUILD_TESTS ${TERMIN_BUILD_TESTS} CACHE BOOL "" FORCE)
set(TERMIN_SCENE_BUILD_TESTS ${TERMIN_BUILD_TESTS} CACHE BOOL "" FORCE)
set(TERMIN_RENDER_BUILD_TESTS ${TERMIN_BUILD_TESTS} CACHE BOOL "" FORCE)
set(TERMIN_COLLISION_BUILD_TESTS ${TERMIN_BUILD_TESTS} CACHE BOOL "" FORCE)
set(TC_BUILD_TESTS ${TERMIN_BUILD_TESTS} CACHE BOOL "" FORCE)

set(BUILD_EDITOR_MINIMAL ${TERMIN_BUILD_EDITOR_MINIMAL} CACHE BOOL "" FORCE)
set(BUILD_EDITOR_EXE ${TERMIN_BUILD_EDITOR_EXE} CACHE BOOL "" FORCE)
set(BUILD_LAUNCHER ${TERMIN_BUILD_LAUNCHER} CACHE BOOL "" FORCE)
set(BUNDLE_PYTHON OFF CACHE BOOL "" FORCE)

set(TGFX2_ENABLE_VULKAN ${TERMIN_ENABLE_VULKAN} CACHE BOOL "" FORCE)
set(USE_SYSTEM_SDL2 ${TERMIN_ENABLE_SDL} CACHE BOOL "" FORCE)

add_subdirectory(termin-base)
add_subdirectory(termin-modules)
add_subdirectory(termin-mesh)
add_subdirectory(termin-csg)
add_subdirectory(termin-navmesh)
add_subdirectory(termin-graphics)
add_subdirectory(termin-inspect)
add_subdirectory(termin-scene)
add_subdirectory(termin-lighting)
add_subdirectory(termin-render)
add_subdirectory(termin-input)
add_subdirectory(termin-display)
add_subdirectory(termin-collision)
add_subdirectory(termin-physics)
add_subdirectory(termin-components/termin-components-mesh)
add_subdirectory(termin-components/termin-components-collision)
add_subdirectory(termin-components/termin-components-render)
add_subdirectory(termin-engine)
add_subdirectory(termin-components/termin-components-kinematic)
add_subdirectory(termin-components/termin-components-physics)
add_subdirectory(termin-skeleton)
add_subdirectory(termin-animation)
add_subdirectory(termin-components/termin-components-skeleton)
add_subdirectory(termin-app/cpp)
add_subdirectory(termin-components/termin-components-animation)
add_subdirectory(tcplot)
