cmake_minimum_required(VERSION 3.18)
project(termin_monorepo VERSION 0.1.0 LANGUAGES C CXX)

option(TERMIN_BUILD_MONOREPO "Build Termin as one CMake target graph" ON)
option(TERMIN_PLATFORM_ANDROID "Build Termin native runtime for Android" OFF)
option(TERMIN_ENABLE_OPENGL "Enable desktop OpenGL-dependent graphics/render targets" ON)
option(TERMIN_BUILD_PYTHON "Build Python/nanobind bindings" OFF)
option(TERMIN_BUILD_TESTS "Build C/C++ tests" OFF)
option(TERMIN_BUILD_TGFX2_TESTS "Build tgfx2 C/C++ tests" ON)
option(TERMIN_BUILD_WINDOW_TESTS "Build tests that require a windowing system" OFF)
option(TERMIN_ENABLE_VULKAN "Enable Vulkan support" ON)
option(TERMIN_ENABLE_SDL "Enable SDL support" ON)
option(TERMIN_BUILD_EDITOR_MINIMAL "Build minimal editor executable" OFF)
option(TERMIN_BUILD_LAUNCHER "Build launcher executable" OFF)
option(TERMIN_BUNDLE_PYTHON "Bundle Python runtime for standalone SDK/editor install" OFF)
option(TERMIN_USE_CCACHE "Use ccache as C/C++ compiler launcher when available" ON)
option(TERMIN_ENABLE_UNITY_BUILD "Enable CMake unity build for faster clean builds" OFF)
option(TERMIN_ENABLE_PCH "Enable precompiled headers for selected C++ targets" ON)

if(TERMIN_PLATFORM_ANDROID)
    set(TERMIN_ENABLE_OPENGL OFF CACHE BOOL "Enable desktop OpenGL-dependent graphics/render targets" FORCE)
    set(TERMIN_BUILD_PYTHON OFF CACHE BOOL "Build Python/nanobind bindings" FORCE)
    set(TERMIN_BUILD_TESTS OFF CACHE BOOL "Build C/C++ tests" FORCE)
    set(TERMIN_BUILD_TGFX2_TESTS OFF CACHE BOOL "Build tgfx2 C/C++ tests" FORCE)
    set(TERMIN_BUILD_WINDOW_TESTS OFF CACHE BOOL "Build tests that require a windowing system" FORCE)
    set(TERMIN_ENABLE_VULKAN ON CACHE BOOL "Enable Vulkan support" FORCE)
    set(TERMIN_ENABLE_SDL OFF CACHE BOOL "Enable SDL support" FORCE)
    set(TERMIN_BUILD_EDITOR_MINIMAL OFF CACHE BOOL "Build minimal editor executable" FORCE)
    set(TERMIN_BUILD_LAUNCHER OFF CACHE BOOL "Build launcher executable" FORCE)
    set(TERMIN_BUNDLE_PYTHON OFF CACHE BOOL "Bundle Python runtime for standalone SDK/editor install" FORCE)
    set(TERMIN_ENABLE_PCH OFF CACHE BOOL "Enable precompiled headers for selected C++ targets" FORCE)
    message(STATUS "Termin: Android native render profile enabled")
endif()

if(NOT TERMIN_ENABLE_OPENGL)
    message(STATUS "Termin: OpenGL backend disabled")
endif()

if(TERMIN_USE_CCACHE AND NOT MSVC)
    find_program(TERMIN_CCACHE_PROGRAM ccache)
    if(TERMIN_CCACHE_PROGRAM)
        if(NOT CMAKE_C_COMPILER_LAUNCHER)
            set(CMAKE_C_COMPILER_LAUNCHER "${TERMIN_CCACHE_PROGRAM}" CACHE STRING "C compiler launcher" FORCE)
        endif()
        if(NOT CMAKE_CXX_COMPILER_LAUNCHER)
            set(CMAKE_CXX_COMPILER_LAUNCHER "${TERMIN_CCACHE_PROGRAM}" CACHE STRING "CXX compiler launcher" FORCE)
        endif()
        message(STATUS "Termin: using ccache compiler launcher: ${TERMIN_CCACHE_PROGRAM}")
    else()
        message(STATUS "Termin: ccache requested but not found")
    endif()
endif()

function(termin_enable_unity_build_for target)
    if(TERMIN_ENABLE_UNITY_BUILD AND TARGET "${target}")
        set_target_properties("${target}" PROPERTIES
            UNITY_BUILD ON
            UNITY_BUILD_BATCH_SIZE 8
        )
    endif()
endfunction()

function(termin_enable_pch_for target)
    if(TERMIN_ENABLE_PCH AND TARGET "${target}")
        get_target_property(_termin_target_type "${target}" TYPE)
        if(MSVC AND _termin_target_type STREQUAL "SHARED_LIBRARY")
            message(STATUS "Termin: PCH skipped for MSVC shared library target ${target}")
            return()
        endif()
        target_precompile_headers("${target}" PRIVATE
            "$<$<COMPILE_LANGUAGE:CXX>:${CMAKE_CURRENT_FUNCTION_LIST_DIR}/cmake/termin_cpp_pch.hpp>"
        )
    endif()
endfunction()

if(TERMIN_ENABLE_UNITY_BUILD)
    message(STATUS "Termin: unity build enabled for selected targets")
endif()

if(TERMIN_ENABLE_PCH)
    message(STATUS "Termin: precompiled headers enabled for selected targets")
endif()

if(TERMIN_BUILD_TESTS)
    if(NOT EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/termin-thirdparty/guard/guard_c.h"
       OR NOT EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/termin-thirdparty/guard/guard_main.h")
        message(FATAL_ERROR
            "TERMIN_BUILD_TESTS=ON requires the guard test framework submodule. "
            "Run: git submodule update --init termin-thirdparty/guard")
    endif()
    enable_testing()
endif()

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
    set(CMAKE_BUILD_TYPE Release CACHE STRING "Build type" FORCE)
endif()

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
include(TerminDependencies)

if(TERMIN_BUILD_PYTHON)
    find_package(Python 3.10 COMPONENTS Interpreter Development REQUIRED)
    set(Python_EXECUTABLE "${Python_EXECUTABLE}" CACHE FILEPATH "Python interpreter used for Termin bindings" FORCE)

    execute_process(
        COMMAND "${Python_EXECUTABLE}" -c "import nanobind, pathlib; print(pathlib.Path(nanobind.__file__).resolve().parent / 'cmake')"
        OUTPUT_VARIABLE TERMIN_NANOBIND_CMAKE_DIR
        OUTPUT_STRIP_TRAILING_WHITESPACE
        RESULT_VARIABLE TERMIN_NANOBIND_CMAKE_RESULT
    )
    if(NOT TERMIN_NANOBIND_CMAKE_RESULT EQUAL 0 OR NOT EXISTS "${TERMIN_NANOBIND_CMAKE_DIR}/nanobind-config.cmake")
        message(FATAL_ERROR "nanobind Python package was not found for ${Python_EXECUTABLE}. Install nanobind before configuring with TERMIN_BUILD_PYTHON=ON.")
    endif()
    file(TO_CMAKE_PATH "${TERMIN_NANOBIND_CMAKE_DIR}" TERMIN_NANOBIND_CMAKE_DIR)
    set(nanobind_DIR "${TERMIN_NANOBIND_CMAKE_DIR}" CACHE PATH "nanobind CMake package directory" FORCE)
endif()

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")

set(TERMIN_EFFECTIVE_BUILD_TGFX2_TESTS OFF)
if(TERMIN_BUILD_TESTS AND TERMIN_BUILD_TGFX2_TESTS)
    set(TERMIN_EFFECTIVE_BUILD_TGFX2_TESTS ON)
endif()

set(TERMIN_EFFECTIVE_BUILD_DISPLAY_TESTS OFF)
if(TERMIN_BUILD_TESTS AND TERMIN_BUILD_WINDOW_TESTS AND TERMIN_ENABLE_SDL)
    set(TERMIN_EFFECTIVE_BUILD_DISPLAY_TESTS ON)
endif()

set(TERMIN_BASE_BUILD_TESTS ${TERMIN_BUILD_TESTS} CACHE BOOL "" FORCE)
set(TERMIN_MODULES_BUILD_TESTS ${TERMIN_BUILD_TESTS} CACHE BOOL "" FORCE)
set(TERMIN_CSG_BUILD_TESTS ${TERMIN_BUILD_TESTS} CACHE BOOL "" FORCE)
set(TERMIN_CSG_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
set(BUILD_TESTS ${TERMIN_BUILD_TESTS} CACHE BOOL "" FORCE)
set(BUILD_TGFX2_TESTS ${TERMIN_EFFECTIVE_BUILD_TGFX2_TESTS} CACHE BOOL "" FORCE)
set(BUILD_TGFX2_WINDOW_TESTS ${TERMIN_BUILD_WINDOW_TESTS} CACHE BOOL "" FORCE)
set(TERMIN_DISPLAY_BUILD_TESTS ${TERMIN_EFFECTIVE_BUILD_DISPLAY_TESTS} CACHE BOOL "" FORCE)
set(TI_BUILD_TESTS ${TERMIN_BUILD_TESTS} CACHE BOOL "" FORCE)
set(TERMIN_SCENE_BUILD_TESTS ${TERMIN_BUILD_TESTS} CACHE BOOL "" FORCE)
set(TERMIN_RENDER_BUILD_TESTS ${TERMIN_BUILD_TESTS} CACHE BOOL "" FORCE)
set(TERMIN_COLLISION_BUILD_TESTS ${TERMIN_BUILD_TESTS} CACHE BOOL "" FORCE)
set(TC_BUILD_TESTS ${TERMIN_BUILD_TESTS} CACHE BOOL "" FORCE)

set(BUILD_EDITOR_MINIMAL ${TERMIN_BUILD_EDITOR_MINIMAL} CACHE BOOL "" FORCE)
set(BUILD_LAUNCHER ${TERMIN_BUILD_LAUNCHER} CACHE BOOL "" FORCE)
set(BUNDLE_PYTHON ${TERMIN_BUNDLE_PYTHON} CACHE BOOL "" FORCE)

set(TGFX2_ENABLE_VULKAN ${TERMIN_ENABLE_VULKAN} CACHE BOOL "" FORCE)
set(TGFX2_ENABLE_OPENGL ${TERMIN_ENABLE_OPENGL} CACHE BOOL "" FORCE)
set(USE_SYSTEM_SDL2 ${TERMIN_ENABLE_SDL} CACHE BOOL "" FORCE)

if(TERMIN_BUILD_PYTHON)
    add_subdirectory(termin-nanobind-sdk)
endif()

add_subdirectory(termin-base)
add_subdirectory(termin-modules)
add_subdirectory(termin-mesh)
add_subdirectory(termin-csg)
add_subdirectory(termin-navmesh)
add_subdirectory(termin-inspect)
add_subdirectory(termin-scene)
add_subdirectory(termin-lighting)
add_subdirectory(termin-input)
add_subdirectory(termin-collision)
add_subdirectory(termin-physics)
add_subdirectory(termin-skeleton)
add_subdirectory(termin-components/termin-components-mesh)
add_subdirectory(termin-components/termin-components-collision)
add_subdirectory(termin-components/termin-components-kinematic)
add_subdirectory(termin-components/termin-components-physics)
add_subdirectory(termin-components/termin-components-skeleton)

add_subdirectory(termin-graphics)
add_subdirectory(termin-materials)
add_subdirectory(termin-render)
add_subdirectory(termin-display)
add_subdirectory(termin-components/termin-components-render)
add_subdirectory(termin-components/termin-components-foliage)
add_subdirectory(termin-render-passes)
add_subdirectory(termin-engine)
add_subdirectory(termin-runtime)

if(TERMIN_PLATFORM_ANDROID)
    add_subdirectory(termin-openxr)
    add_subdirectory(termin-android)
endif()

if(NOT TERMIN_PLATFORM_ANDROID)
    add_subdirectory(termin-animation)
    add_subdirectory(termin-app/cpp)
    add_subdirectory(termin-components/termin-components-animation)
    add_subdirectory(tcplot)
endif()
